# Medantra-backend

./: .env.example  .gitignore  .vercelignore  README.md  build.sh  main.py  netlify.toml  pyproject.toml  requirements-prod.txt  requirements.txt  test_api.py  vercel.json
api/: ask.py  embed_image.py  embed_pdf.py  healthcheck.py  index.py  requirements-ask.txt  requirements-image.txt  requirements-pdf.txt
app/: main.py
public/: index.html
